# vectorizers

./: azure-pipelines.yml  pyproject.toml
doc/: information_weight_transform.ipynb  token_cooccurrence_vectorizer_multi_labelled_cyber_example.ipynb
vectorizers/: linear_optimal_transport.py  multi_token_cooccurence_vectorizer.py
vectorizers/transformers/: info_weight.py
